--- a/gulp-less-project-structure/package.json
+++ b/gulp-less-project-structure/package.json
@@ -10,11 +10,11 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-sourcemaps": "^2.6.3",
-    "gulp-webserver": "^0.9.1",
-    "less-plugin-autoprefix": "^1.5.1"
+    "gulp-clean-css": "^3.9.2",
+    "gulp-sourcemaps": "^2.6.3"
   },
   "dependencies": {
+    "browser-sync": "^2.23.6",
     "gulp-less": "^3.4.0"
   }
 }
